Z-index correction

--- a/src/styles.css
+++ b/src/styles.css
@@ -157,6 +157,7 @@ canvas{
   position: relative;
   width: 100vw;
   height: 100vh;
+  z-index: 300;
   /* background-color: bisque; */
 }
 .navigation {
